@@ -35,6 +35,10 @@ RELEASE NOTES
 
     Removed support for the long deprecated Logtalk metapredicate/1 directive.
 
+    Corrected a performance bug when caching calls to category predicates where
+    the cache entry could be more specific than necessary when working with
+    parametric categories.
+
 
 2.43.0 - July 31, 2011
 
